Updated to use PyQt5

--- a/pc_control/settings.json
+++ b/pc_control/settings.json
@@ -1,7 +1,7 @@
 {
-    "1": "0", 
-    "2": "0", 
-    "boot_count": 2, 
-    "clean_exit": true, 
+    "1": "0",
+    "2": "0",
+    "boot_count": 13,
+    "clean_exit": false,
     "port": "COM82"
 }
