--- a/pc_control/settings.json
+++ b/pc_control/settings.json
@@ -1,7 +1,7 @@
 {
     "1": "0",
     "2": "0",
-    "boot_count": 13,
-    "clean_exit": false,
+    "boot_count": 1,
+    "clean_exit": true,
     "port": "COM82"
 }
